crates/tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_contract_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No field `bar` exists on this contract
  ┌─ compile_errors/invalid_contract_field.fe:5:10
  │
5 │     self.bar
  │          ^^^ undefined field


